--- a/action.yml
+++ b/action.yml
@@ -74,6 +74,7 @@ runs:
         fi
 
     - name: Find Comment
+      if: ${{ github.event_name == 'pull_request' }}
       uses: peter-evans/find-comment@v3
       id: fc
       with:
